Add language selection, spanish and OCR command output view.

--- a/source/poetts/App.config
+++ b/source/poetts/App.config
@@ -6,5 +6,7 @@
     <add key="hkey_pause" value="P" />
     <add key="hkey_stop" value="S" />
     <add key="poe_game_path" value="" />
+    <add key="last_selected_voice" value="" />
+    <add key="last_selected_language" value="" />
   </appSettings>
 </configuration>
