--- a/source/poetts/poetts.csproj
+++ b/source/poetts/poetts.csproj
@@ -132,11 +132,20 @@
 <!--            <CopyToPublishDirectory>Always</CopyToPublishDirectory>-->
 <!--        </Content>-->
         <Content Include="Pillars_of_Eternity.ico"/>
+        <Content Update="..\deps\tesseract\tessdata\spa.traineddata">
+          <Link>tesseract\tessdata\spa.traineddata</Link>
+        </Content>
+        <Content Update="..\deps\temp\x.txt">
+          <Link>temp\x.txt</Link>
+        </Content>
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.CSharp" Version="4.7.0"/>
         <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0"/>
         <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0"/>
-        <PackageReference Include="System.Speech" Version="9.0.0-preview.7.24405.7"/>
+        <PackageReference Include="System.Speech" Version="8.0.0" />
+    </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\SpeechApiFix\SpeechApiFix.csproj" />
     </ItemGroup>
 </Project>
